--- a/www/cart-1.html
+++ b/www/cart-1.html
@@ -91,7 +91,7 @@
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
-						<div class="item" data-item-summ="7196.74" data-articul="001"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
+						<div class="item" data-item-summ="7196.74" data-artikul="001"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -104,7 +104,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74" data-articul="002">
+						<div class="item" data-item-summ="7196.74" data-artikul="002">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -118,7 +118,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74" data-articul="003">
+						<div class="item" data-item-summ="7196.74" data-artikul="003">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -262,7 +262,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr data-item-artikul="001" data-item-price="3500" data-item-discount-price="3400" data-item-vol="1">
+					<tr data-item-artikul="001" data-item-price="3500" data-item-discount-price="3400">
 						<td>1</td>
 						<td><a href="#"><img src="images/product-image.jpg" alt="Изображение товара"></a></td>
 						<td><a href="#">Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</a></td>
@@ -280,10 +280,7 @@
 							</div>
 						</td>
 						<td>3500</td>
-						<td>
-							<div class="special-price">3400</div>
-							<div class="old-price"><span>3500</span> руб</div>
-						</td>
+						<td></td>
 						<td>
 							<a href="#" class="trash">
 								<svg version="1.1" id="trash-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="328.48px" height="392px" viewBox="0 0 328.48 392" enable-background="new 0 0 328.48 392" xml:space="preserve">
@@ -305,7 +302,7 @@
 							</a>
 						</td>
 					</tr>
-					<tr data-item-artikul="002" data-item-price="4500" data-item-discount-price="4400" data-item-vol="1">
+					<tr data-item-artikul="002" data-item-price="4500">
 						<td>2</td>
 						<td><a href="#"><img src="images/product-image.jpg" alt="Изображение товара"></a></td>
 						<td><a href="#">Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</a></td>
@@ -319,14 +316,11 @@
 						</td>
 						<td>
 							<div class="count">
-								<input id="cart-item-2" type="number" min="1" max="999" step="1" value="1" />
+								<input id="cart-item-2" type="number" min="1" max="999" step="1" value="2" />
 							</div>
 						</td>
 						<td>4500</td>
-						<td>
-							<div class="special-price">4400</div>
-							<div class="old-price"><span>4500</span> руб</div>
-						</td>
+						<td></td>
 						<td>
 							<a href="#" class="trash">
 								<svg version="1.1" id="trash-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="328.48px" height="392px" viewBox="0 0 328.48 392" enable-background="new 0 0 328.48 392" xml:space="preserve">
@@ -348,7 +342,7 @@
 							</a>
 						</td>
 					</tr>
-					<tr data-item-artikul="001" data-item-price="5500" data-item-discount-price="5400" data-item-vol="1">
+					<tr data-item-artikul="003" data-item-price="5500" data-item-discount-price="5400">
 						<td>3</td>
 						<td><a href="#"><img src="images/product-image.jpg" alt="Изображение товара"></a></td>
 						<td><a href="#">Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</a></td>
@@ -362,14 +356,11 @@
 						</td>
 						<td>
 							<div class="count">
-								<input id="cart-item-3" type="number" min="1" max="999" step="1" value="1" />
+								<input id="cart-item-3" type="number" min="1" max="999" step="1" value="3" />
 							</div>
 						</td>
 						<td>5500</td>
-						<td>
-							<div class="special-price">5400</div>
-							<div class="old-price"><span>5500</span> руб</div>
-						</td>
+						<td></td>
 						<td>
 							<a href="#" class="trash">
 								<svg version="1.1" id="trash-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="328.48px" height="392px" viewBox="0 0 328.48 392" enable-background="new 0 0 328.48 392" xml:space="preserve">
